--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <div class="overlay"></div>
     <div class="scanlines"></div>
     <div class="marquee-container">
-        <div class="marquee-text">Nothing to see here.</div>
+        <div class="marquee-text">Nothing to see here. If you're looking for rackcreator. It's on hold. Working on another project for now. >:)</div>
     </div>
 </body>
 </html>
