--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     <div class="timer">30</div>
     <div class="marquee-container">
         <div class="marquee-text">Nothing to see here.</div>
+        <div class="marquee-text">If you're looking for RackCreator. It is currently on hold. Thanks!</div>
     </div>
 
     <script>
