--- a/index.html
+++ b/index.html
@@ -118,8 +118,7 @@
     <div class="scanlines"></div>
     <div class="timer">60</div>
     <div class="marquee-container">
-        <div class="marquee-text">Nothing to see here.</div>
-        <div class="marquee-text">If you're looking for RackCreator. It is currently on hold. Thanks!</div>
+        <div class="marquee-text">Nothing to see here. You're probably redirected here cause my application is down. Try again later!</div>
     </div>
 
     <script>
